# qua_workshop_20260318

./: README.md  kill_instances.py  pyproject.toml  requirements.txt
atoms/: DC_offset_calibration.py  configuration_opx1000_lffem.py  configuration_opx1000_mwfem_lffem.py  configuration_with_lf_fem_single.py  debug_fulltest_modified.py  run_opx_01_play_cw.py  run_opx_02_play_trigger.py  run_opx_03_phase_shift.py  run_opx_04_math_int_divs.py  run_opx_05_math_mod.py  run_saas_01_play_cw.py  run_saas_02_play_trigger.py  run_saas_03_phase_shift.py  run_saas_04_play_chirp.py  run_saas_05_wait_for_trigger.py  run_saas_06_test_readout_occupation_matrix.py  test_two_chirps01.py  test_two_chirps02.py  test_two_chirps03.py
atoms/minimal_jerk/: Array_sorting_config_sticky.py  Minimial_jerk_with_AM_correction.py
atoms/opxplus_example/: 05a_test_readout_occupation_matrix_loopback.py  configuration.py  configuration_with_digital_marker.py
superconducting/: configuration_opx1000_mwfem_lffem.py  configuration_opxplus_octave.py  run_saas_01_play_continuous.py  run_saas_02_analog_input_calibration.py  run_saas_03a_resonator_spectroscopy.py  run_saas_03b_resonator_spectroscopy_vs_amplitude.py  run_saas_03c_resonator_spectroscopy_vs_flux.py  run_saas_04_qubit_spectroscopy.py  run_saas_05_time_rabi.py  run_saas_06_ramsey_with_virtual_phase.py  run_saas_07a_IQ_blobs.py  run_saas_07b_active_reset.py  run_saas_08_1Q_randomized_benchmarking.py
